--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(zipf_plot)
 importFrom(ClusterR,KMeans_rcpp)
 importFrom(ClusterR,Optimal_Clusters_KMeans)
 importFrom(arrangements,combinations)
+importFrom(cluster,pam)
+importFrom(cluster,silhouette)
 importFrom(dendextend,get_subdendrograms)
 importFrom(dendextend,hang.dendrogram)
 importFrom(dendextend,ladderize)
@@ -45,6 +47,7 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,n)
 importFrom(dplyr,na_if)
 importFrom(dplyr,rename)
@@ -55,6 +58,7 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
+importFrom(e1071,naiveBayes)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,arrow)
@@ -105,6 +109,7 @@ importFrom(igraph,add_vertices)
 importFrom(igraph,betweenness)
 importFrom(igraph,bipartite_mapping)
 importFrom(igraph,cluster_fast_greedy)
+importFrom(igraph,cluster_optimal)
 importFrom(igraph,delete_edges)
 importFrom(igraph,delete_vertices)
 importFrom(igraph,edge.attributes)
